[tool.poetry]
name = "sender"
version = "0.1.0"
description = ""
authors = ["LionTao <taojiachun980831@163.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pykafka = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
